<resources>
    <string name="app_name">CorsiBlockTappingApp</string>
    <string name="action_settings">Settings</string>
    <string name="play_button">Play</string>
    <string name="corsi_grid">corsi_grid</string>
    <string name="start">Start</string>
    <string name="record">Record</string>
    <string name="done">Done</string>
    <string name="restart">Restart</string>
    <string name="next">Next</string>
    <string name="default_time">Total Time: 00:00</string>
    <string name="default_game_time">00:00</string>
    <string name="tries_left">Tries Left:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="game_settings">Game Settings</string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="export_to_json">Export to JSON</string>
    <string name="instructions">How to play?\nUpon clicking the play button, you will see the computer draw out a pattern for you. Your task is to draw the same pattern that the computer drew for you. You get two tries to draw the correct pattern. If it is correct you proceed to the next round by clicking Next.</string>
</resources>
