<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/choose_difficulty"
    android:layout_above="@id/difficulty_level"
    android:layout_centerHorizontal="true"/>
    <RadioGroup
        android:id="@+id/difficulty_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/easy_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/medium_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/hard_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </RadioGroup>


</RelativeLayout>