<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:width="250dp"
            android:backgroundTint="@color/button_colors"
            android:text="@string/play_button" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_below="@id/play_button"
            android:layout_marginTop="20dp"
            android:width="250dp"
            android:backgroundTint="@color/button_colors"
            android:text="@string/game_settings"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/instructions" />
</android.widget.RelativeLayout>